<resources>
    <string name="app_name">InfoAppv2</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="next">Next</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Willkommen in der InfoApp!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calender">Kalender</string>
    <string name="menu_campus">Campus</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_courses">Kurse</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_ehelp">Ersti-Hilfe</string>
    <string name="menu_imprint">Impressum</string>
    <string name="menu_institute">Institute</string>
    <string name="menu_options">Einstellungen</string>
    <string name="menu_person">Personen</string>
    <string name="menu_stops">Haltestellen</string>
    <string name="menu_game">Spiele</string>
    <string name="menu_news">News</string>

    <string name="imprint_paragraph">Angaben gem. §5 TMG</string>
    <string name="imprint_hs">Hochschule Osnabrück</string>
    <string name="imprint_camp">Campus Lingen</string>
    <string name="imprint_fak">Management, Kultur und Technik</string>
    <string name="imprint_hs2">University of Applied Sciences</string>
    <!--    <string name="imprint_docname">Prof. Dr. Michael Ryba</string>-->
    <string name="imprint_street">Kaiserstraße 10C</string>
    <string name="imprint_plz">49809 Lingen(Ems)</string>
    <string name="imprint_data"><u>Hinweise zum Datenschutz</u></string>
    <string name="imprint_haft"><u>Haftungsausschluss</u></string>
    <string name="imprint_uhr"><u>Uhrheberrechtsinformationen</u></string>
    <string name="imprint_osource"><u>Open Source Libraries</u></string>

    <string name="imprint_website"><u>www.hs-osnabrueck.de</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ins_header">Über das Institut</string>
    <string name="ins_header2">Aktuelles</string>

    <string name="cour_text">Informationsseite \nBewerbungsseite</string>

    <string name="camp_img1">Die große Lokhalle nach dem Luftangriff 1944</string>
    <string name="camp_img2">Blick in die Kesselschmiede im Jahre 1897</string>
    <string name="camp_img3">Lokabteilung um 1900</string>
    <string name="camp_img4">Der Blick auf den Güterbahnhof 1950 - Ansicht vom Wasserturm</string>
    <string name="camp_img5">Bahnhof und Eisenbahnausbesserungswerk im Jahr 1959</string>
    <string name="camp_img6">Hallen I und II</string>
    <string name="camp_img7">Campus Lingen von außen</string>
    <string name="camp_img8">Unser Campus von innen</string>
    <string name="camp_archLin">Stadtarchiv Lingen</string>
    <string name="camp_his">Geschichte des Campus Lingen</string>
    <string name="camp_building">Gebäudeplan</string>
    <string name="camp_site">Lageplan</string>

</resources>