<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_rss_feed_24"
            android:title="@string/menu_news"/>
        <item
            android:id="@+id/nav_ehelp"
            android:icon="@drawable/ic_baseline_local_hospital_24"
            android:title="@string/menu_ehelp" />
        <item
            android:id="@+id/nav_campus"
            android:icon="@drawable/ic_baseline_explore_24"
            android:title="@string/menu_campus" />
        <item
            android:id="@+id/nav_persons"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_person" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_institute"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_institute" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_stops"
            android:icon="@drawable/ic_baseline_train_24"
            android:title="@string/menu_stops" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_chat" />
    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_game"/>
    </group>

    <group
        android:id="@+id/menu_bot"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_options" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_imprint"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/menu_imprint" />
    </group>

</menu>