<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_ehelp"
        android:name="com.example.infoappv2.ui.campus.CampusFragment"
        android:label="@string/menu_ehelp"
        tools:layout="@layout/fragment_campus" />

    <fragment
        android:id="@+id/nav_campus"
        android:name="com.example.infoappv2.ui.help.EhelpFragment"
        android:label="@string/menu_campus"
        tools:layout="@layout/fragment_ehelp" />

    <fragment
        android:id="@+id/nav_persons"
        android:name="com.example.infoappv2.ui.person.PersonFragment"
        android:label="@string/menu_person"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.infoappv2.ui.calender.CalenderFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.infoappv2.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/activity_chat" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.infoappv2.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.infoappv2.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_imprint"
        android:name="com.example.infoappv2.ui.imprint.ImprintFragment"
        android:label="@string/menu_imprint"
        tools:layout="@layout/fragment_imprint" />

    <fragment
        android:id="@+id/nav_institute"
        android:name="com.example.infoappv2.ui.institute.InstituteFragment"
        android:label="@string/menu_institute"
        tools:layout="@layout/fragment_institute" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.example.infoappv2.ui.options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_stops"
        android:name="com.example.infoappv2.ui.stops.StopsFragment"
        android:label="@string/menu_stops"
        tools:layout="@layout/fragment_stops" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.infoappv2.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.infoappv2.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
</navigation>