<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.campus.CampusFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/camp_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/camp_firsttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#B6B5B5">

                <TextView
                    android:id="@+id/camp_firstdrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/camp_firstdroptext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/camp_site"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camp_site"
                android:textColor="#fff"
                android:background="@color/design_default_color_primary_dark"/>

            <Button
                android:id="@+id/camp_building"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"
                android:textColor="#fff"
                android:text="@string/camp_building"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camp_his"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/camp_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/camp_img1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/camp_archLin"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img2"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:text="@string/camp_archLin"
                android:background="@color/design_default_color_primary_dark"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img3"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:text="@string/camp_archLin"
                android:background="@color/design_default_color_primary_dark"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img4"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/camp_archLin"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img5"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:text="@string/camp_archLin"
                android:background="@color/design_default_color_primary_dark"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img6"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="#fff"
                android:text="@string/camp_archLin"
                android:background="@color/design_default_color_primary_dark"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img7"
                android:background="@color/design_default_color_primary_dark"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/camp_img8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/camp_img8"
                android:background="@color/design_default_color_primary_dark"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>